--- a/src/sass/global/_boilerplate.scss
+++ b/src/sass/global/_boilerplate.scss
@@ -10,10 +10,12 @@ html{
 body {
     background: black;
     font-family: Helvetica Neue, Helvetica, sans-serif;
+    -webkit-font-smoothing: antialiased;
     color: white;
     padding: 0;
     list-style: none;
     margin: 0;
+    
 }
 
 button{
