--- a/src/sass/components/_topFilms.scss
+++ b/src/sass/components/_topFilms.scss
@@ -40,6 +40,7 @@ line-height: 20px;
 #top-films-footer{
     display: flex;
     justify-content: center;
+    margin-top: 3rem;
 }
 #top-films-footer a{
     font-size: .9rem;
