--- a/src/sass/components/_filmDetails.scss
+++ b/src/sass/components/_filmDetails.scss
@@ -4,31 +4,32 @@ h2.section-title{
     margin-top: 0;
 }
 
-.film-details{
+.film-details-hero{
     position: relative;
-        &__image{
+}
+
+.film-details__image{
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        z-index: -1;
+        &::after{
             position: absolute;
             top: 0;
+            right: 0;
+            bottom: 0;
             left: 0;
-            height: 30vh;
-            z-index: -1;
-            &::after{
-                position: absolute;
-                top: 0;
-                right: 0;
-                bottom: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                content: "";
-                background: linear-gradient(180deg,transparent,rgba(0,0,0,.76) 90%,rgba(0,0,0,.88) 100%);
-            }
+            width: 100%;
+            height: 103%;
+            content: "";
+            background: linear-gradient(180deg,transparent,rgba(0,0,0,.76) 90%,rgba(0,0,0,.88) 100%);
+        }
 
-            img{
-                filter: blur(3px);
-                height: 100%;
-                object-fit: cover;
-            }
+        img{
+            filter: blur(3px);
+            height: 100%;
+            object-fit: cover;
         }
 }
 
@@ -36,6 +37,10 @@ h2.section-title{
     display: flex;
     width: 100%;
     gap: 10px;
+    padding: 1rem 0;
+    h1{
+        margin: 0;
+    }
 }
 .film-details__poster-img{
     flex: 0 0 7.625rem;
